# confidence-sdk-rust

./: .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  README.md  catalog-info.yaml  release-please-config.json
.github/workflows/: ci.yaml  release-please.yaml
confidence/: CHANGELOG.md  Cargo.toml
confidence-shared/: Cargo.toml  build.rs  pyproject.toml  shared.py
confidence-shared/python/: confidence.py
confidence-shared/src/: lib.rs  shared.udl
confidence/src/: apply.rs  confidence_value.rs  contextual_confidence.rs  conversion_trait.rs  details.rs  evaluation_error.rs  event_sender.rs  flag_schema_deserializer.rs  lib.rs  lib_test.rs  models.rs  resolve.rs  simple_error_tests.rs
demo/: Cargo.toml
demo/src/: main.rs
demo_open_feature/: Cargo.toml
demo_open_feature/src/: main.rs
provider/: Cargo.toml  README.md
provider/src/: conversion_traits.rs  lib.rs  lib_test.rs
python-confidence/: confidence.py
