[package]
name = "confidence-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.confidence]
path = "../confidence"

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
async-trait = "0.1.74"
uniffi = {version = "0.27.2", features = ["cli", "tokio"] }
futures = "0.3.29"

[profile.release]
debug = false
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

[build-dependencies]
uniffi = {version = "0.27.2", features = ["build"] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"
