[package]
name = "confidence-shared"
version = "0.1.0"
edition = "2021"

[dependencies.confidence]
path = "../confidence"

[lib]
crate-type = ["cdylib"]
name = "confidence_shared"

[dependencies]
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
async-trait = "0.1.74"
uniffi = {version = "0.27.2", features = ["cli", "tokio"] }
futures = "0.3.29"
lazy_static = "1.4.0"

[profile.release]
debug = false
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

[build-dependencies]
uniffi = {version = "0.27.2", features = ["build"] }
uniffi_macros = "0.27.2"

[package.metadata.maturin]
name = "confidence_shared._internal"