[package]
name = "confidence"
# x-release-please-start-version
version = "0.1.0"
# x-release-please-end
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
futures = "0.3"
reqwest = "0.11"
tokio = {version = "1.33.0", features = ["full"] }
open-feature = "0.1.2"
async-trait = "0.1.74"
lazy_static = "1.4.0"
time = "0.3.30"
typed-builder = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = "1.5.0"
cargo_metadata = "0.18.1"
mockall = "0.12.0"
