[package]
name = "spotify_confidence_sdk"
# x-release-please-start-version
version = "0.1.0"
# x-release-please-end
edition = "2021"
description = "Confidence SDK for Rust"
license = "Apache-2.0"
license-file = "../LICENSE"
repository = "https://github.com/spotify/confidence-sdk-rust"
readme = "../README.md"
homepage = "https://confidence.spotify.com/"
keywords = ["experimentation", "confidence", "spotify", "ab_testing", "feature_flagging"]
include = ["src/**/*", "Cargo.toml", "../README.md", "../LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
debug = false
strip = true
opt-level = 'z'
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
reqwest = "0.12.4"
tokio = "1.33.0"
async-trait = "0.1.74"
typed-builder = "0.18.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockall = "0.12.0"
