[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.confidence]
path = "../confidence"

[dependencies]
tokio = {version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
open-feature = "0.1.2"
