[package]
name = "demo_open_feature"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.spotify_confidence_openfeature_provider]
path = "../provider"
[dependencies.spotify_confidence_sdk]
path = "../confidence"

[dependencies]
tokio = {version = "1.33.0", features = ["full"] }
async-trait = "0.1.74"
open-feature = "0.2.5"
rand = "0.8"
