[package]
name = "provider"
# x-release-please-start-version
version = "0.1.0"
# x-release-please-end
edition = "2021"

[dependencies.confidence]
path = "../confidence"

[dependencies]
open-feature = "0.2.3"
async-trait = "0.1.74"
typed-builder = "0.18.2"
mockall = "0.12.0"
tokio = {version = "1.33.0", features = ["full"] }
anyhow = "1.0.86"
serde_json = "1.0.108"
