[package]
name = "spotify_confidence_openfeature_provider"
# x-release-please-start-version
version = "0.1.5"
# x-release-please-end
edition = "2021"
description = "Openfeature provider for the Confidence SDK for Rust"
license = "Apache-2.0"
license-file = "../LICENSE"
repository = "https://github.com/spotify/confidence-sdk-rust"
readme = "README.md"
homepage = "https://confidence.spotify.com/"
keywords = ["experimentation", "confidence", "spotify", "ab_testing", "feature_flagging"]
include = ["src/**/*", "Cargo.toml", "../README.md", "../LICENSE"]

[dependencies.spotify_confidence_sdk]
path = "../confidence"
version = "0.1.1"

[dependencies]
open-feature = "0.2.5"
async-trait = "0.1.74"
typed-builder = "0.18.2"
mockall = "0.12.0"
tokio = {version = "1.33.0", features = ["full"] }
anyhow = "1.0.86"
serde_json = "1.0.108"
